# distributed-machine-learning-cluster

./: Cargo.toml  README.md
pretrained_models/: alexnet.ot  resnet18.ot
src/: main.rs  membership.rs  model_utils.rs  services.rs  utils.rs
