[package]
name = "mp4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = { version = "0.4.22", features = ["serde"] }
enclose = "1.1.8"
env_logger = "0.9.1"
flexbuffers = "2.0.0"
futures = "0.3.25"
histogram = "0.6.9"
log = "0.4.17"
mockstream = "0.0.3"
nix = { version = "0.25.0", features = ["hostname"] }
path-absolutize = "3.0.14"
rand = "0.8.5"
sanitize-filename = "0.4.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_with = "2.0.1"
simple-logging = "2.0.2"
socket2 = { version = "0.4.7", features = ["all"] }
tabled = "0.8.0"
tarpc = { version = "0.30.0", features = ["full"] }
tch = "0.4.1"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = { version = "0.1.11", features = ["fs", "io-util"] }

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
